src/ui.css
html,
body {
    margin: 0;
    padding: 0;
    outline: 0;
    overflow: hidden;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

* {
    user-select: none !important;
}
canvas {
    outline: none;
}

.app {
    display: flex;
}

.panel {
    width: 100%;
    overflow: scroll;
    height: 83%;
}

.shelf {
    overflow-y: scroll;
    border-left: 1px solid #ddd;
}

.panel__button {
    position: relative;
    margin-top: 10px !important;
}

/* .panel__button--load {
} */

.panel__button--render {
    height: 30px;
}

.panel__fileInput {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    opacity: 0;
    z-index: 100;
}

.loader__container {
    margin: auto;
}

.loader__backdrop {
    height: 100%;
    background: linear-gradient(to bottom, black, rgba(255, 0, 0, 0));
    position: absolute;
    display: flex;
}
.loader__text {
    color: white;
    text-align: center;
    font: caption;
    font-size: 12px;
    margin: 0;
}

.viewport {
    outline: none;
}

.divider {
    border-bottom: 1px solid #eee;
    padding: 20px;
}

/* utils */
.pad {
    padding: 5px 20px;
}

input[type="file"] {
    /* opacity: 0; */
    position: relative;
}

.fileinput {
    position: relative;
}

.fileinput input[type="file"] {
    opacity: 0;
}

.fileinput__placeholder {
    position: absolute;
    bottom: -8px;
    left: 30px;
    width: 80%;
    height: 100%;
    color: black;
    font: caption;
    font-size: 12px;
    pointer-events: none;
    position: default;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.divider--foot {
    margin: 5px 0;
    padding: 0 !important;
}

.footstat {
    height: 32px;
    border-top: 1px solid #ddd;
    position: absolute;
    right: -1px;
    bottom: 0;
    z-index: 10;
    /* background: rgba(255, 255, 255, 0.445); */
    background: white;
    width: 250px;
}

.footstat__block {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 16px;
    position: relative;
}

.footstat__btn {
    transform: scale(0.7);
}

.tab {
    display: flex;
    align-items: center;
    height: 30px;
    padding: 5px 20px;
    border-bottom: 1px solid #eee;
}

.tab__item {
    margin-right: 15px !important;
    cursor: pointer !important;
    user-select: none;
    max-width: 45px !important;
    font-size: 16px;
    transition: ease all 0.3s;
}

.tab__item:hover {
    color: #333 !important;
}

.tab__item--active {
    color: #333 !important;
}

.light {
    display: flex;
    align-items: center;
    justify-content: space-between;
    font: caption;
    margin-top: 10px;
}

.light__name {
    margin-right: 10px;
    /* max-width: 60%; */
    overflow: hidden;
    text-overflow: ellipsis;
    user-select: none;
    white-space: nowrap;
    cursor: default;
    font-size: 12px !important;
}

.light__color {
    width: 16px !important;
    min-width: 16px !important;
    height: 16px !important;
    border-radius: 3px;
    margin-right: 10px;
    border: 1px solid #f1f1f1;
    overflow: hidden;
}

.light__textInput {
    width: 59.3438px !important;
    min-width: 59.3438px !important;
    max-width: 59.3438px !important;
    align-items: center;
    justify-content: space-between;
}

light__textInput--faint {
    align-items: center;
    justify-content: space-between;
}

.light__color__input {
    width: 100%;
    height: 100%;
    opacity: 0;
}

.lightOptions {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}
.lightOptions__select {
    width: 80% !important;
}

.light--sub {
    padding-left: 25px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.TreeHeader .r {
    visibility: hidden;
    transform: scale(0.9) !important;
}

.TreeHeader .l {
    width: 75% !important;
}
.TreeHeader .l div {
    transform: scale(0.9) !important;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.NodeContainer:hover .r {
    visibility: visible;
}

.NodeContainer:hover {
    border: 1px solid #1dcaff !important;
}

